mudei texto de título da home

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,18 +11,18 @@ html
           li 
             a(href="/") Home
           li 
-            a(href="/about") About
+            a(href="#") About
           li 
-            a(href="/contact") Contact
+            a(href="#") Contact
     section#wrapper!= body
         footer 
           section.css-table
             section.four-column
               section.cell
-                p Mauris porttitor <br />felis eu leo aliquet<br /> ac rutrum odio aliquet
+                p Peligas <br />Bonitinha<br /> Dos cabelo
               section.cell
-                p Mauris porttitor <br />felis eu leo aliquet<br /> ac rutrum odio aliquet
+                p De retrói <br />se quiser<br /> casar comigo
               section.cell
-                p Mauris porttitor <br />felis eu leo aliquet<br /> ac rutrum odio aliquet
+                p Vai fazer <br />Café<br /> pra nói
               section.cell
-                p Mauris porttitor <br />felis eu leo aliquet<br /> ac rutrum odio aliquet
+                p Louco Louco Louco Melo <br />Muito Louco Louco Melo<br /> Cogumelho de Jesus
